# CMakeList.txt: 顶层 CMake 项目文件，在此处执行全局配置
# 并包含子项目。
#
cmake_minimum_required (VERSION 3.8)

project ("Beginner_C++")

# 包含子项目。
add_subdirectory ("01_HelloWorld")

add_subdirectory("02_variable")

add_subdirectory("03_constant")

add_subdirectory("04_String")

add_subdirectory("05_boolean")

add_subdirectory("06_Data_input")

add_subdirectory("07_if_cycle")

add_subdirectory("08_Ternary_operator")

add_subdirectory("09_Switch")

add_subdirectory("10_Case_study_Three_little_pigs_weigh_themselves")

add_subdirectory("11_Struct_array")

add_subdirectory("12_Structure_nesting")

add_subdirectory("13_Structure_as_function_parameters")

add_subdirectory("14_Union")

add_subdirectory("15_Pointer_define")

add_subdirectory("16_Array_Deconstruction_Pointer")

add_subdirectory("17_Vector_Array")

add_subdirectory("18_2D_Array")

add_subdirectory("19_cctype")

add_subdirectory("20_Conditional_operator")

add_subdirectory("21_Switch_02")

add_subdirectory("22_Switch_enum")

add_subdirectory("23_break_continue")

add_subdirectory("24_write_file")

add_subdirectory("25_read_file")

add_subdirectory("26_Function_calls_and_usage")

add_subdirectory("27_Arguments_and_parameters")

add_subdirectory("28_Case_study_Card_game")

add_subdirectory("29_Array_function")

add_subdirectory("30_Pointer_Array")

add_subdirectory("31_Pointer_Function")

add_subdirectory("32_Pointer_Array_Function")

add_subdirectory("33_Case_study_Address_book_Management_system")

add_subdirectory("34_Memory")

add_subdirectory("35_new")

add_subdirectory("36_Reference")

add_subdirectory("37_Default_functions_and_parameter_placeholders")

add_subdirectory("38_Function_overloading")

add_subdirectory("39_Classes_and_objects")

add_subdirectory("40_Access_permissions")

add_subdirectory("41_Permissions_usage")

add_subdirectory("42_Packaging_case")

add_subdirectory("42_Package_case_point_cercle")

add_subdirectory("44_Initialization_and_cleanup_of_objects")

add_subdirectory("45_ClassObject_as_ClassMember")

add_subdirectory("46_this_pointer")

add_subdirectory("47_class_friend")

add_subdirectory("48_Operator_overloading")

add_subdirectory("49_inherit")

add_subdirectory("50_Polymorphism")

add_subdirectory("51_Polymorphism_Case_Calculator")

add_subdirectory("52_Polymorphism_Case_Drink")

add_subdirectory("53_Polymorphism_Case_ComputerAssembly")

add_subdirectory("54_File_read_and_write")

add_subdirectory("55_Staff_Management_System")

add_subdirectory("56_Template")

add_subdirectory("57_Template_case")

add_subdirectory("58_STL_Standard_template_library")

add_subdirectory("59_STL_String")
